--- a/frontend/src/app/pacientes/formulario-paciente/formulario-cadastro.component.html
+++ b/frontend/src/app/pacientes/formulario-paciente/formulario-cadastro.component.html
@@ -1,32 +1,42 @@
 <div class="ui-g ui-fluid">
-  <p-accordion>
-    <p-accordionTab header="Dados Pessoais">
-      <div [formGroup]="formularioDeCadastro">
-        <app-dados-pessoais
-          [dadosPessoais]="formularioDeCadastro.controls.dadosPessoais"
-        ></app-dados-pessoais>
-      </div>
-    </p-accordionTab>
-    <p-accordionTab header="Contatos do Paciente">
-      <app-telefone></app-telefone>
-    </p-accordionTab>
-    <p-accordionTab header="Endereço">
-      <app-endereco></app-endereco>
-    </p-accordionTab>
-    <p-accordionTab header="Responsável">
-      <app-responsavel></app-responsavel>
-    </p-accordionTab>
-    <p-accordionTab header="Documentos">
-      <app-documentos></app-documentos>
-    </p-accordionTab>
-    <p-accordionTab header="Certidão">
-      <app-certidao></app-certidao>
-    </p-accordionTab>
-    <p-accordionTab header="Cartão SUS">
-      <app-cartao-sus></app-cartao-sus>
-    </p-accordionTab>
-    <p-accordionTab header="Observação">
-      <app-observacao></app-observacao>
-    </p-accordionTab>
-  </p-accordion>
+    <div [formGroup]="formularioDeCadastro">
+        <p-accordion>
+            <p-accordionTab header="Dados Pessoais">
+                <app-dados-pessoais
+                    [dadosPessoais]="formularioDeCadastro.controls.dadosPessoais"
+                ></app-dados-pessoais>
+            </p-accordionTab>
+            <p-accordionTab header="Contatos do Paciente">
+                <app-telefone [telefones]="formularioDeCadastro.controls.telefones"> </app-telefone>
+            </p-accordionTab>
+
+            <p-accordionTab header="Endereço">
+                <app-endereco [enderecos]="formularioDeCadastro.controls.enderecos"></app-endereco>
+            </p-accordionTab>
+            <p-accordionTab header="Responsável">
+                <app-responsavel
+                    [responsavel]="formularioDeCadastro.controls.responsavel"
+                ></app-responsavel>
+            </p-accordionTab>
+            <p-accordionTab header="Documentos">
+                <app-documentos
+                    [documentos]="formularioDeCadastro.controls.documentos"
+                ></app-documentos>
+            </p-accordionTab>
+            <p-accordionTab header="Certidão">
+                <app-certidao [certidao]="formularioDeCadastro.controls.certidao"></app-certidao>
+            </p-accordionTab>
+            <p-accordionTab header="Cartão SUS">
+                <app-cartao-sus
+                    [cartaoSUS]="formularioDeCadastro.controls.cartaoSUS"
+                ></app-cartao-sus>
+            </p-accordionTab>
+            <p-accordionTab header="Observação">
+                <app-observacao
+                    [observacao]="formularioDeCadastro.controls.observacao"
+                ></app-observacao>
+            </p-accordionTab>
+        </p-accordion>
+        <button pButton type="submit" label="Cadastrar"></button>
+    </div>
 </div>
