--- a/frontend/src/app/pacientes/formulario-paciente/cartao-sus/cartao-sus.component.html
+++ b/frontend/src/app/pacientes/formulario-paciente/cartao-sus/cartao-sus.component.html
@@ -1,103 +1,108 @@
-<form class="ui-g ui-fluid" [formGroup]="cartaoSUS">
-  <div class="ui-g-12">
-    <div class="ui-g-2">
-      <span class="ui-float-label">
-        <p-inputMask
-          pInputText
-          formControlName="numero"
-          mask="999 9999 9999 9999"
-          pTooltip="Informe o número do Cartão SUS (CNS)."
-        ></p-inputMask>
-        <label>Número</label>
-      </span>
-    </div>
-    <div class="ui-g-2">
-      <span class="ui-float-label">
-        <p-dropdown
-          [options]="listaAusenciaCns"
-          pTooltip="Selecione o motivo da ausência do cartão SUS do paciente."
-          formControlName="justificativa"
-        ></p-dropdown>
-        <label>Justificativa da Ausência CNS</label>
-      </span>
-    </div>
-    <div class="ui-g-2">
-      <span class="ui-float-label">
-        <p-dropdown
-          [options]="listaMotivoCadastro"
-          pTooltip="Selecione o motivo do cadastro."
-          formControlName="motivoCadastro"
-        ></p-dropdown>
-        <label>Motivo Cadastro</label>
-      </span>
-    </div>
-    <div class="ui-g-2">
-      <span class="ui-float-label">
-        <p-dropdown
-          [options]="listaDocReferencia"
-          pTooltip="Selecione o Documento de Referência."
-          formControlName="docReferencia"
-        ></p-dropdown>
-        <label>Doc Referência</label>
-      </span>
-    </div>
-
-    <div class="ui-g-2">
-      <span class="ui-float-label">
-        <input
-          type="text"
-          pTooltip="Informe a Portaria"
-          pInputText
-          formControlName="cartaoNacional"
-        />
-        <label>Cartão Nacional Saúde Mãe</label>
-      </span>
-    </div>
-  </div>
-  <legend>Se Naturalizado Brasileiro</legend>
-  <div class="ui-g-12">
-    <div class="ui-g-2 ui-sm-12">
-      <span class="ui-float-label">
-        <p-calendar
-          [locale]="localizacao"
-          [yearRange]="yearRange"
-          dateFormat="dd/mm/yy"
-          [maxDate]="maxDate"
-          monthNavigator="true"
-          yearNavigator="true"
-          pTooltip="Informe a data de entrada no Brasil."
-          formControlName="dataDeEntrada"
-        ></p-calendar>
-        <label>Data de Entrada no Brasil</label>
-      </span>
-    </div>
-    <div class="ui-g-2 ui-sm-12">
-      <span class="ui-float-label">
-        <p-calendar
-          [locale]="localizacao"
-          [yearRange]="yearRange"
-          [dateFormat]="formatoDeData"
-          monthNavigator="true"
-          yearNavigator="true"
-          pTooltip="Informe a data de Naturalização no Brasil."
-          formControlName="dataDeNaturalizacao"
-        ></p-calendar>
-        <label>Data de Naturalização</label>
-      </span>
-    </div>
-    <div class="ui-g-2 ui-sm-12">
-      <span class="ui-float-label">
-        <label>Portaria</label>
-        <input type="text" pTooltip="Informe a Portaria" pInputText formControlName="portaria" />
-      </span>
-    </div>
+<div class="ui-g ui-fluid" [formGroup]="cartaoSUS">
     <div class="ui-g-12">
-      <div class="ui-g-2 ui-sm-12">
-        <button pButton type="submit" label="Visualizar impressão"></button>
-      </div>
-      <div class="ui-g-2 ui-sm-12">
-        <button pButton type="submit" label="Imprimir"></button>
-      </div>
+        <div class="ui-g-2">
+            <span class="ui-float-label">
+                <p-inputMask
+                    pInputText
+                    formControlName="numero"
+                    mask="999 9999 9999 9999"
+                    pTooltip="Informe o número do Cartão SUS (CNS)."
+                ></p-inputMask>
+                <label>Número</label>
+            </span>
+        </div>
+        <div class="ui-g-2">
+            <span class="ui-float-label">
+                <p-dropdown
+                    [options]="listaAusenciaCns"
+                    pTooltip="Selecione o motivo da ausência do cartão SUS do paciente."
+                    formControlName="justificativa"
+                ></p-dropdown>
+                <label>Justificativa da Ausência CNS</label>
+            </span>
+        </div>
+        <div class="ui-g-2">
+            <span class="ui-float-label">
+                <p-dropdown
+                    [options]="listaMotivoCadastro"
+                    pTooltip="Selecione o motivo do cadastro."
+                    formControlName="motivoCadastro"
+                ></p-dropdown>
+                <label>Motivo Cadastro</label>
+            </span>
+        </div>
+        <div class="ui-g-2">
+            <span class="ui-float-label">
+                <p-dropdown
+                    [options]="listaDocReferencia"
+                    pTooltip="Selecione o Documento de Referência."
+                    formControlName="docReferencia"
+                ></p-dropdown>
+                <label>Doc Referência</label>
+            </span>
+        </div>
+
+        <div class="ui-g-2">
+            <span class="ui-float-label">
+                <input
+                    type="text"
+                    pTooltip="Informe a Portaria"
+                    pInputText
+                    formControlName="cartaoNacional"
+                />
+                <label>Cartão Nacional Saúde Mãe</label>
+            </span>
+        </div>
     </div>
-  </div>
-</form>
+    <legend>Se Naturalizado Brasileiro</legend>
+    <div class="ui-g-12">
+        <div class="ui-g-2 ui-sm-12">
+            <span class="ui-float-label">
+                <p-calendar
+                    [locale]="localizacao"
+                    [yearRange]="yearRange"
+                    dateFormat="dd/mm/yy"
+                    [maxDate]="maxDate"
+                    monthNavigator="true"
+                    yearNavigator="true"
+                    pTooltip="Informe a data de entrada no Brasil."
+                    formControlName="dataDeEntrada"
+                ></p-calendar>
+                <label>Data de Entrada no Brasil</label>
+            </span>
+        </div>
+        <div class="ui-g-2 ui-sm-12">
+            <span class="ui-float-label">
+                <p-calendar
+                    [locale]="localizacao"
+                    [yearRange]="yearRange"
+                    [dateFormat]="formatoDeData"
+                    monthNavigator="true"
+                    yearNavigator="true"
+                    pTooltip="Informe a data de Naturalização no Brasil."
+                    formControlName="dataDeNaturalizacao"
+                ></p-calendar>
+                <label>Data de Naturalização</label>
+            </span>
+        </div>
+        <div class="ui-g-2 ui-sm-12">
+            <span class="ui-float-label">
+                <label>Portaria</label>
+                <input
+                    type="text"
+                    pTooltip="Informe a Portaria"
+                    pInputText
+                    formControlName="portaria"
+                />
+            </span>
+        </div>
+        <div class="ui-g-12">
+            <div class="ui-g-2 ui-sm-12">
+                <button pButton type="submit" label="Visualizar impressão"></button>
+            </div>
+            <div class="ui-g-2 ui-sm-12">
+                <button pButton type="submit" label="Imprimir"></button>
+            </div>
+        </div>
+    </div>
+</div>
