--- a/frontend/src/app/pacientes/formulario-paciente/observacao/observacao.component.html
+++ b/frontend/src/app/pacientes/formulario-paciente/observacao/observacao.component.html
@@ -1,3 +1,3 @@
-<form class="ui-g ui-fluid" [formGroup]="observacao">
-  <textarea formControlName="valor" [rows]="3" pInputTextarea autoResize="autoResize"></textarea>
-</form>
+<div class="ui-g ui-fluid" [formGroup]="observacao">
+    <textarea formControlName="valor" [rows]="3" pInputTextarea autoResize="autoResize"></textarea>
+</div>
