--- a/frontend/src/app/pacientes/formulario-paciente/responsavel/responsavel.component.html
+++ b/frontend/src/app/pacientes/formulario-paciente/responsavel/responsavel.component.html
@@ -1,59 +1,59 @@
-<form class="ui-g ui-fluid" [formGroup]="responsavel">
-  <div class="ui-g-12">
-    <div class="ui-g-3 ui-sm-12">
-      <span class="ui-float-label">
-        <input
-          type="text"
-          pInputText
-          formControlName="nomeDoResponsavel"
-          pTooltip="Digite o nome do responsável do paciente."
-        />
-        <label>Nome do Responsável</label>
-      </span>
+<div class="ui-g ui-fluid" [formGroup]="responsavel">
+    <div class="ui-g-12">
+        <div class="ui-g-3 ui-sm-12">
+            <span class="ui-float-label">
+                <input
+                    type="text"
+                    pInputText
+                    formControlName="nomeDoResponsavel"
+                    pTooltip="Digite o nome do responsável do paciente."
+                />
+                <label>Nome do Responsável</label>
+            </span>
+        </div>
+        <div class="ui-g-2 ui-sm-12">
+            <span class="ui-float-label">
+                <p-dropdown
+                    [options]="grausDeParentesco"
+                    formControlName="grauDeParentesco"
+                    [filter]="true"
+                    pTooltip="Selecione o grau de parentesco do paciente."
+                ></p-dropdown>
+                <label>Grau de Parentesco</label>
+            </span>
+        </div>
+        <div class="ui-g-1 ui-sm-12">
+            <span class="ui-float-label">
+                <p-inputMask
+                    formControlName="ddd"
+                    mask="(999)"
+                    placeholder="(___)"
+                    pTooltip="Digite o DDD do paciente."
+                ></p-inputMask>
+                <label>DDD</label>
+            </span>
+        </div>
+        <div class="ui-g-2 ui-sm-12">
+            <span class="ui-float-label">
+                <p-inputMask
+                    formControlName="telefone"
+                    mask="99999-9999"
+                    placeholder="_____-____"
+                    pTooltip="Digite o telefone do paciente."
+                ></p-inputMask>
+                <label>Telefone</label>
+            </span>
+        </div>
+        <div class="ui-g-2 ui-sm-12">
+            <span class="ui-float-label">
+                <input
+                    type="text"
+                    pInputText
+                    formControlName="observacao"
+                    pTooltip="Digite a observação do paciente."
+                />
+                <label>Observação</label>
+            </span>
+        </div>
     </div>
-    <div class="ui-g-2 ui-sm-12">
-      <span class="ui-float-label">
-        <p-dropdown
-          [options]="grausDeParentesco"
-          formControlName="grauDeParentesco"
-          [filter]="true"
-          pTooltip="Selecione o grau de parentesco do paciente."
-        ></p-dropdown>
-        <label>Grau de Parentesco</label>
-      </span>
-    </div>
-    <div class="ui-g-1 ui-sm-12">
-      <span class="ui-float-label">
-        <p-inputMask
-          formControlName="ddd"
-          mask="(999)"
-          placeholder="(___)"
-          pTooltip="Digite o DDD do paciente."
-        ></p-inputMask>
-        <label>DDD</label>
-      </span>
-    </div>
-    <div class="ui-g-2 ui-sm-12">
-      <span class="ui-float-label">
-        <p-inputMask
-          formControlName="telefone"
-          mask="99999-9999"
-          placeholder="_____-____"
-          pTooltip="Digite o telefone do paciente."
-        ></p-inputMask>
-        <label>Telefone</label>
-      </span>
-    </div>
-    <div class="ui-g-2 ui-sm-12">
-      <span class="ui-float-label">
-        <input
-          type="text"
-          pInputText
-          formControlName="observacao"
-          pTooltip="Digite a observação do paciente."
-        />
-        <label>Observação</label>
-      </span>
-    </div>
-  </div>
-</form>
+</div>
