Define dados pessoais como accordion principal

--- a/frontend/src/app/pacientes/formulario-paciente/formulario-cadastro.component.html
+++ b/frontend/src/app/pacientes/formulario-paciente/formulario-cadastro.component.html
@@ -1,7 +1,7 @@
 <div class="ui-g ui-fluid">
     <div [formGroup]="formularioDeCadastro">
         <p-accordion>
-            <p-accordionTab header="Dados Pessoais">
+            <p-accordionTab header="Dados Pessoais" [selected]="true">
                 <app-dados-pessoais
                     [dadosPessoais]="formularioDeCadastro.controls.dadosPessoais"
                 ></app-dados-pessoais>
