--- a/frontend/src/app/pacientes/formulario-paciente/responsavel/responsavel.component.html
+++ b/frontend/src/app/pacientes/formulario-paciente/responsavel/responsavel.component.html
@@ -14,7 +14,7 @@
         <div class="ui-g-2 ui-sm-12">
             <span class="ui-float-label">
                 <p-dropdown
-                    [options]="grausDeParentesco"
+                    [options]="opcoesDeGrauDeParentesco"
                     formControlName="grauDeParentesco"
                     [filter]="true"
                     pTooltip="Selecione o grau de parentesco do paciente."
