Corrige valores dos enums das combos

--- a/frontend/src/app/pacientes/formulario-paciente/dados-pessoais/dados-pessoais.component.html
+++ b/frontend/src/app/pacientes/formulario-paciente/dados-pessoais/dados-pessoais.component.html
@@ -191,6 +191,7 @@
                     [options]="opcoesDeGrauDeInstrucao"
                     formControlName="grauDeInstrucao"
                     pTooltip="Selecione o grau de instrução do paciente."
+                    filter="true"
                 >
                 </p-dropdown>
                 <label>Grau de Instrução</label>
